--- a/forms.html
+++ b/forms.html
@@ -15,13 +15,16 @@
                    <input type="text" name="name" placeholder="Ім'я" required>
                 </label>
                 <br>
+                <br>
                 <label>Телефон:
                    <input type="number" name="phonenumber" placeholder="380000000000">
                 </label>
                 <br>
+                <br>
                 <label>Email:
                    <input type="email" name="email" placeholder="vkatsma@gmail.com" required>
                 </label>
+                <br>
                 <br>
                 <label>Дата відвідування:
                    <input type="date" name="date" required>
@@ -34,9 +37,11 @@
                    <input type="radio" name="sex" value="Female">Жіноча
                 </label>
                 <br>
+                <br>
                 <label>Вік:
-                   <input type="number" name="age" placeholder="yourage" min="1" max="100">
+                   <input type="number" name="age" placeholder="Вік" min="1" max="100">
                 </label>
+                <br>
                 <br>
                 <label>Улюблена кухня:
                    <select>
@@ -49,6 +54,7 @@
                    </select>
                 </label>
                 <br> 
+                <br>
                 <label>Які страви Ви хотіли б побачити в меню:
                    <textarea placeholder="Ваші побажання"></textarea>
                 </label>
