--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     </header>
     <nav>Here shoud be a navigation</nav>
     <br>
-    <section>
-        <em>Some section here</em>
+    <article>
+        <em>Some article here</em>
         <p>Please fill this application 
         <a href="forms.html"><strong><em>Forms</em></strong></a>
         </p>
-    </section>
+    </article>
     <br>
-    <table border="1" width="500" height="250">
+    <table border="1" width="500">
         <tr>
             <td rowspan="2" colspan="2"></td>
             <td rowspan="4" colspan="2"></td>
@@ -59,7 +59,7 @@
         </tr>
     </table>
     <br>
-    <section>
+    <article><h3>Some list here</h3>
         <ul type="circle">
             <li>Item 1</li>
             <li>Item 2</li>
@@ -68,14 +68,14 @@
             <li>Item 5</li>
         </ul>
         <br>
-        <ol type="1" resersed start="6">
+        <ol type="A">
             <li>Item 1</li>
             <li>Item 2</li>
             <li>Item 3</li>
             <li>Item 4</li>
             <li>Item 5</li>
         </ol>
-    </section>
+    </article>
     <footer>
         <small>This is footer</small>
     </footer>
