--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>Here shoud be a navigation</nav>
     <br>
     <article>
-        <em>Some article here</em>
+        <h3<em>Some article here</em>
         <p>Please fill this application 
         <a href="forms.html"><strong><em>Forms</em></strong></a>
         </p>
